--- a/views/main/index.ejs
+++ b/views/main/index.ejs
@@ -1,3 +1,3 @@
-<div class="container main-container" ng-controller="ParentController">
+<div class="container main-container" ng-controller="MainController">
 
 </div>
